--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "npm run build"
-  publish = "dist/public"
+  publish = "client/dist"
+  base = "."
   
 [functions]
   directory = "dist"
