Fix Netlify build issues: Update Vite version and build configuration

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "cd client && vite build && cd .. && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "cd client && npm run build && cd .. && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:client": "cd client && npm run build",
     "cap:sync": "npm run build:client && npx cap sync",
     "cap:build": "npm run cap:sync && cd android && .\\gradlew assembleRelease",
