--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   command = "npm run build"
-  publish = "client/dist"
+  publish = "dist/public"
   base = "."
-  
-[functions]
-  directory = "dist"
 
 [[redirects]]
   from = "/api/*"
